@@ -1,3 +1,11 @@
+2002-09-16  Braden McDaniel  <braden@endoframe.com>
+
+        * src/openvrml/OpenVRML/vrml97node.cpp,
+          src/openvrml/OpenVRML/vrml97node.h: Removed
+          Group::setChildren, Group::addChildren, and
+          Group::removeChildren; moved this functionality to the
+          Group::process* methods.
+
 2002-09-13  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/node.cpp,
